WebCore: <rdar://problem/7645609> [webView selectionRect] API is broken for multicolumn layout

Reviewed by Simon Fraser.

Refine the fix for https://bugs.webkit.org/show_bug.cgi?id=34923 by using the center of
a quad’s bounding box, rather than its top left, as the reference point passed to
offsetFromContainer(). This ensures that if a sliver off the top of the selection rect is in
one column, but most of it is on another column, the single rect we return will be for the
second column.

* platform/graphics/FloatRect.h:
(WebCore::FloatRect::center): Added.
* rendering/RenderObject.cpp:
(WebCore::RenderObject::localToContainerQuad): Use the center instead of the top left.

LayoutTests: Add test case for <rdar://problem/7645609> [webView selectionRect] API is broken for multicolumn layout

Reviewed by Simon Fraser.

* fast/multicol/client-rects-expected.checksum:
* fast/multicol/client-rects-expected.png:
* fast/multicol/client-rects-expected.txt:
* fast/multicol/client-rects.html:



Canonical link: https://commits.webkit.org/46114@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@54807 268f45cc-cd09-0410-ab3c-d52691b4dbfc