WebCore/platform/graphics/FloatRect.h
@@ -99,6 +99,8 @@ public:
     float right() const { return x() + width(); }
     float bottom() const { return y() + height(); }
 
+    FloatPoint center() const { return IntPoint(x() + width() / 2, y() + height() / 2); }
+
     void move(const FloatSize& delta) { m_location += delta; } 
     void move(float dx, float dy) { m_location.move(dx, dy); } 
 
